--- a/templates/article.html
+++ b/templates/article.html
@@ -6,6 +6,6 @@
 <small>Written by {{article.author}} on {{article.create_date}}</small>
 <hr>
 <div>
-    {{article.body}}
+    {{article.body | safe}}
 </div>
 {% endblock %}
