--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
         <td>{{article.title}}</td>
         <td>{{article.author}}</td>
         <td>{{article.create_date}}</td>
-        <td><a href="edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a></td>
+        <td><a href="/edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a></td>
         <td>
           <form action="{{url_for('delete_article', id =article.id)}}" method = "post">
             <input type="hidden" name="_method" value="DELETE">
