--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -7,9 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-      <!--    <a class="navbar-brand" href="/">
-          <img src="{{ url_for('static',filename="x.jpeg",style="height:10px;width:10")}}">
-        </a>-->
+
           <a class="navbar-brand" href="/">Blood +ve</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
@@ -18,7 +16,7 @@
 
 
         <li><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin:8px" onclick="location.href='/Search/'" ">Search</button></li>
-
+        <li><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin:8px" onclick="location.href='/articles/'" ">Articles</button></li>
 
           </ul>
 
