update password added

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -15,7 +15,7 @@
     {% else %}
     <label> verified</label><br>
     {% endif %}
-    <br><a href='/password'><input type="button" class="btn btn-link" value="Change Password"></a><br>
+    <br><a href='/updatepassword'><input type="button" class="btn btn-link" value="Change Password"></a><br>
     <a href='/delete'><input type="button" class="btn btn-link" value="Delete Account"></a><br>
     {% endfor %}
   </div>
