--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,18 +1,54 @@
-{% extends 'layout1.html' %}
-
-{% block body %}
-  <h1>Change Password</h1>
-
-
-  <form action="" method="POST">
-    <div class="form.group">
-      <label>Old  Password</label>
-      <input type="password" name="PASSWORD" class="form-control" value ={{request.form.PASSWORD}}>
-      <label>New Password</label>
-      <input type="password" name="CHANGE" class="form-control" value ={{request.form.CHANGE}}>
-      <label>Confirm New Password</label>
-      <input type="password" name="CONFIRM" class="form-control" value ={{request.form.CONFIRM}}>
+{% extends 'layout.html' %}
+{% block content %}
+    <div class="content-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Update Password</legend>
+                <div class="form-group">
+                    {{ form.OLDPASSWORD.label(class="form-control-label") }}
+                    {% if form.OLDPASSWORD.errors %}
+                        {{ form.OLDPASSWORD(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.OLDPASSWORD.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.OLDPASSWORD(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.NEWPASSWORD.label(class="form-control-label") }}
+                    {% if form.NEWPASSWORD.errors %}
+                        {{ form.NEWPASSWORD(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.NEWPASSWORD.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.NEWPASSWORD(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.confirm.label(class="form-control-label") }}
+                    {% if form.confirm.errors %}
+                        {{ form.confirm(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.confirm.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.confirm(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.Submit(class="btn btn-outline-info") }}
+            </div>
+            
+        </form>
     </div>
-    <button type="submit" class="btn btn-primary">Change Password</button>
-  </form>
-  {% endblock %}
+{% endblock content %}
