--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -16,7 +16,7 @@
 
 
         <li><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin:8px" onclick="location.href='/Search/'" ">Search</button></li>
-        <li><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin:8px" onclick="location.href='/articles/'" ">Articles</button></li>
+        <li><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin:8px" onclick="location.href='/articles/'" ">Feedback</button></li>
 
           </ul>
 
