--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
                 {{ form.Submit(class="btn btn-outline-info") }}
             </div>
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('forgot') }}"">Forgot Password?</a>
             </small>
         </form>
     </div>
