--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,14 @@
 {% extends 'layout1.html' %}
 
 {% block body %}
-<div class="jumbotron text-center">
-     <h1>What is this all about ?</h1>
-     <p class="lead"> We solve the problem of blood emergencies by connecting blood donors directly with people in blood need.</p>
+<div class="jumbotron">
+     <h1 style="color: #f1c40f; text-weight: bold; margin-left:300px">Know About US</h1>
+	<br>
+     <h3 style="color: white; font-weight: bold">1.) Help Us In Saving Life's</h3>
+     <p style="color: white">A single pint can save three lives, a single gesture can create a million smiles. So come join hands with us by just doing a simple registration. Whenever a person in need of the of a blood group similar to yours will contact us for a doner you will be notified through an E-Mail notification containing the contact details of the person requested so that you can contact him or her directly for donating blood.</p>
+<hr>
+     <h3 style="color: white; font-weight: bold">2.) In Search Of A Doner, Contact Us</h3>
+     <p style="color: white">No need to worry we are here to the rescue , we will help you in saving the life of your beloved once, no need to panic no neeed to run here and there, just stay with your beloved one and we will help you get the donner. You only need to place a request on our site by providing few details and as soon as a doner will be availabe he or she will contact you for further process.  </p>
 </div>
 
 {% endblock %}
