--- a/templates/setter.html
+++ b/templates/setter.html
@@ -1,8 +1,9 @@
 {%extends 'layout1.html' %}
 {% block body %}
   <hr>
-  <a href='/send'><input type="button" class="btn btn-success" value="Send Mail to all"></a>
-  <table class="table table-striped">
+  <a href='/send'><input type="button" class="btn btn-success" value="Send Mail to all"></a><br><br>
+  <table class="table table-border" style="color: white; font-size:18px; background-color: black">
+   <thead style="font-weight: bold">
     <tr>
       <th>Name</th>
       <th>Email</th>
@@ -12,8 +13,10 @@
       <th></th>
       <th></th>
     </tr>
+  </thead>
+  <tbody>
     {% for search in search %}
-      <tr>
+      <tr style="color: #5dade2">
         <td>{{search.NAME}}</td>
         <td>{{search.EMAIL}}</td>
         <td>{{search.PHONE_NUMBER}}</td>
@@ -21,4 +24,5 @@
         <td>{{search.BLOOD_GROUP}}
       </tr>
     {% endfor %}
+  </tbody>
 {% endblock %}
