--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -1,14 +1,14 @@
 {% extends 'layout1.html' %}
 {% block body %}
-  <h1>Edit Article</h1>
+  <h1 style="color: white">Edit Article</h1>
   {% from "includes/_formhelpers.html" import render_field %}
   <form method="POST" action="">
-    <div class="form-group">
+    <div class="form-group" style="color: white">
       {{ render_field(form.title, class_="form-control") }}
     </div>
-    <div class="form-group">
+    <div class="form-group" style="color: white">
       {{ render_field(form.body, class_="form-control", id="editor") }}
     </div>
-    <p><input class="btn btn-primary" type="submit" value="Submit">
+    <input class="btn btn-primary" type="submit" value="Submit">
   </form>
 {% endblock %}
