--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,25 @@
   {% extends 'layout1.html' %}
 
   {% block body %}
-  <div class="jumbotron text-center">
-       <h1>Welcome To Blood +(ve)</h1>
+ <div class="split left">
+  <div class="centered">
 
-
-
-       <p class="lead">A lot of people are willing and are eligible to donate blood. On the other hand, there is
-always a shortage of blood. This web app would seek to simplify the entire process of
-blood donations.</p>
-
+  </div>
 </div>
+
+<div class="split right">
+  <div class="centered">
+    <div class="jumbotron text-center bg-transparent">
+       <h1 style="color: #d5dbdb; font-weight: bold">DONATE</h1>
+       <p class="lead" style="color:  #f2f3f4 ">A single pint can save three lives, a single gesture can create a million smiles.</p>
+{% if session.logged_in == NULL %}
+  <a href ="/register" class="btn btn-primary btn-lg btn-block" style="font-weight: bold">Register</a>
+	<br>
+  <a href='/login'>Already have an account?</a>
+  <a href ="/login" class="btn btn-success btn-lg btn-block" style="font-weight: bold">Login</a>
+{% endif %}
+</div>
+</div>
+</div>
+
 {% endblock %}
