--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,15 +7,15 @@
 
     <!-- Bootstrap CSS -->
 
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <title>Blood Positive</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   </head>
   <body>
     {%include 'includes/_navbar.html' %}
-    <div class="container">
+    <div class="container" style="margin-top: 60px">
       {% include 'includes/_messages.html' %}
       <main role="main" class="container">
         <div class="row">
