--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
+	<div class ="split centered" style="width: 95%; margin-top: 290px; margin-left: 150px; height: 550px">
     <div class="content-section">
+	<h1 style="color: black;">Let's Get Started!</h1>
+	<br>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+            <fieldset class="form-group" style="color: black; font-weight: bold; text-align: left">
                 <div class="form-group">
                     {{ form.NAME.label(class="form-control-label") }}
 
@@ -127,7 +129,7 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.Submit(class="btn btn-outline-info") }}
+                {{ form.Submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
         </form>
     </div>
@@ -136,4 +138,5 @@
             Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
         </small>
     </div>
+</div>
 {% endblock content %}
