--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 {%extends 'layout1.html' %}
 {% block body %}
   <h1 style="color: white"><span>Welcome {{ session.USERNAME}}!</span></h1>
-  <a class="btn btn-success" href="/add_article">Add Article</a>
+  <a class="btn btn-success" href="/add_article">Add Feedback</a>
   <hr>
   <table class="table table-border" style="color: white; font-size:18px; background-color: black">
    <thead style="font-weight: bold">
