--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,7 +1,7 @@
 {% extends 'layout1.html'%}
 {% block body %}
 <div class ="content-section" style="width: auto; margin-top: 40px; margin-left: 50px; text-align: center">
-  <h1 style="color: black">Add Article</h1>
+  <h1 style="color: black">Give Feedback</h1>
 	<br>
   {% from "includes/_formhelpers.html" import render_field %}
   <form method ="POST" action="">
