--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -19,7 +19,7 @@
             <li><a href="/articles/">Feedbacks</a></li>
             {% if session.logged_in %}
               <li><a href="/logout/">Logout</a></li>
-              <li><a href="/dashboard/">Dashboard</a></li>
+              <li><a href="/dashboard/">History</a></li>
               <li><a href="/settings/">Account Settings</a></li>
             {% else %}
              <li><a href="/register/" >Register</a></li>
