--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,14 +1,14 @@
 {%extends 'layout1.html' %}
 {% block body %}
   <h1 style="color: white"><span>Welcome {{ session.USERNAME}}!</span></h1>
-  <a class="btn btn-success" href="/add_article">Add Feedback</a>
+  <a class="btn btn-success" href="/show">Fulfilled Requests</a>
   <hr>
   <table class="table table-border" style="color: white; font-size:18px; background-color: black">
    <thead style="font-weight: bold">
     <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Author</th>
+
+      <th>City</th>
+      <th>Blood Group</th>
       <th>Date</th>
       <th></th>
       <th></th>
@@ -16,17 +16,19 @@
    </thead>
   <tbody>
     {% for article in articles %}
+    {% if article.verify ==0 %}
       <tr style="color: #5dade2">
-        <td>{{article.id}}</td>
-        <td>{{article.title}}</td>
-        <td>{{article.author}}</td>
+        <td>{{article.CITY}}</td>
+        <td>{{article.BLOOD_GROUP}}</td>
         <td>{{article.create_date}}</td>
-        <td><a href="/edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a></td>
+
         <td>
-          <form action="{{url_for('delete_article', id =article.id)}}" method = "post" style="color: white">
+          <form action="{{url_for('delete_article',id=article.id, city =article.CITY,blood=article.BLOOD_GROUP)}}" method = "post" style="color: white">
             <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" VALUE="Delete" class="btn btn-danger">
+            <input type="submit" VALUE="Request Fulfilled?" class="btn btn-danger">
           </form>
+          {% endif %}
+
         </td>
       </tr>
     {% endfor %}
